@@ -18,6 +18,7 @@ using namespace smsc::sme;
 using smsc::logger::Logger;
 
 class SmscConnector;
+class PerformanceTester;
 
 class InfoSmePduListener: public smsc::sme::SmppPduEventListener 
 {
@@ -30,6 +31,7 @@ public:
 
   void setSyncTransmitter(SmppTransmitter *transmitter);
   void setAsyncTransmitter(SmppTransmitter *transmitter);
+    void setPerformanceTester(PerformanceTester* pt);
   void processReceipt (SmppHeader *pdu);
   void processResponce(SmppHeader *pdu);
   void handleEvent(SmppHeader *pdu);
@@ -39,6 +41,7 @@ private:
     SmscConnector& processor;
   SmppTransmitter* syncTransmitter;
   SmppTransmitter* asyncTransmitter;
+    PerformanceTester* performanceTester_; // not owned
   std::string smscId_;
   Logger* logger;
     smsc::sms::IllFormedReceiptParser* parser_;
