@@ -1,6 +1,8 @@
 History in reverse order
 ----------------------------------------------------
 
+2010-04-12 14:45 bukind
+ performance test support (no transport layer), v1 only
 2010-04-07 14:00 bukind
  task statistics on open messages, v1 & v2
 2010-04-07 15:50 bukind
